# AubioPlugin4Android

./: AubioPlugin.cpp  AubioPlugin.h  AubioVampPluginWrapper.cpp  AubioVampPluginWrapper.h  CMakeLists.txt  README.md
plugin/: MelEnergy.cpp  MelEnergy.h  Mfcc.cpp  Mfcc.h  Notes.cpp  Notes.h  Onset.cpp  Onset.h  Pitch.cpp  Pitch.h  Silence.cpp  Silence.h  SpecDesc.cpp  SpecDesc.h  Tempo.cpp  Tempo.h
src/io/: source_avcodec.c
src/temporal/: a_weighting.c  c_weighting.c
src/utils/: windll.c
